feat: tests and config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/__tests__/**"]
+  "exclude": ["node_modules", "dist", "**/*.stories.tsx", "**/__tests__/**", "**/test-utils/**"]
 }
