chore(ci): add visual regression and baseline updateschore(ci): add visual regression and baseline updates

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ coverage/
 
 # Storybook
 storybook-static/
+
+# Lost Pixel (current and difference are generated, baseline is committed)
+.lostpixel/current/
+.lostpixel/difference/
