--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "bugs": {
     "url": "https://github.com/OctavianTocan/react-dropdown/issues"
   },
-  "sideEffects": false,
+  "sideEffects": [
+    "*.css"
+  ],
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -23,6 +25,15 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
+    "./types": {
+      "types": "./dist/types.d.ts"
+    },
+    "./hooks": {
+      "types": "./dist/hooks.d.ts",
+      "import": "./dist/hooks.js",
+      "require": "./dist/hooks.cjs"
+    },
+    "./styles.css": "./dist/styles/dropdown.css",
     "./package.json": "./package.json"
   },
   "scripts": {
